Fix styling on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,13 +179,14 @@ a {
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 40%;
 }
 
 .form-title {
   align-self: center;
   font-size: 2rem;
   font-weight: 700;
+  text-align: center;
 }
 
 .form-message {
@@ -208,4 +209,10 @@ form {
   display: grid;
   grid-template-rows: repeat(auto-fit, 1fr);
   gap: 1rem;
+}
+
+@media (max-width: 600px) {
+  .header {
+    flex-direction: column;
+  }
 }
